# anitya-rs

./: Cargo.toml  README.md
src/: client.rs  errors.rs  lib.rs  request.rs  v2.rs
src/v2/: packages.rs  projects.rs  versions.rs
tests/: packages.rs  projects.rs  versions.rs
