[package]
name = "anitya"
description = "Anitya HTTP API client"
license = "MIT OR Apache-2.0"

version = "0.1.0-dev"
edition = "2021"
rust-version = "1.56.0"

authors = ["Fabio Valentini <decathorpe@gmail.com>"]
readme = "README.md"
categories = ["api-bindings"]
keywords = ["anitya", "release-monitoring", "REST", "client"]
repository = "https://github.com/ironthree/anitya-rs"

[dependencies]
log = "0.4.14"
reqwest = "0.11"
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0.78"
serde_url_params = "0.2.1"
thiserror = "1.0.30"
tokio = { version = "1.14", features = ["time"] }
url = "2.2"

[dev-dependencies]
env_logger = "0.9"
tokio = { version = "1.14", features = ["macros", "rt-multi-thread", "time"] }
